src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__class_statements_inline_method_scoping.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Class(
            Class {
                name: Ident(
                    "A2",
                ),
                parent: None,
                members: ClassMembers {
                    init: None,
                    fields: [],
                    methods: [
                        Func {
                            name: Ident(
                                "inner1",
                            ),
                            params: Params {
                                has_self: true,
                                pos: [],
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                        Func {
                            name: Ident(
                                "inner2",
                            ),
                            params: Params {
                                has_self: true,
                                pos: [],
                            },
                            body: [
                                Pass,
                            ],
                            has_yield: false,
                        },
                    ],
                },
            },
        ),
        Func(
            Func {
                name: Ident(
                    "outer",
                ),
                params: Params {
                    has_self: false,
                    pos: [],
                },
                body: [
                    Pass,
                ],
                has_yield: false,
            },
        ),
    ],
}
