src/internal/syntax/parser/snapshots/hebi__internal__syntax__parser__tests__class_statements_support_inline_fields.snap
---
source: src/internal/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Class(
            Class {
                name: Ident(
                    "A1",
                ),
                parent: None,
                members: ClassMembers {
                    init: None,
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: Literal(
                                Int(
                                    1,
                                ),
                            ),
                        },
                    ],
                    methods: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "A2",
                ),
                parent: None,
                members: ClassMembers {
                    init: None,
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: Literal(
                                Int(
                                    1,
                                ),
                            ),
                        },
                    ],
                    methods: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "B",
                ),
                parent: None,
                members: ClassMembers {
                    init: None,
                    fields: [
                        Field {
                            name: Ident(
                                "b",
                            ),
                            default: Literal(
                                Int(
                                    2,
                                ),
                            ),
                        },
                    ],
                    methods: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "A3",
                ),
                parent: None,
                members: ClassMembers {
                    init: None,
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: Literal(
                                Int(
                                    1,
                                ),
                            ),
                        },
                        Field {
                            name: Ident(
                                "b",
                            ),
                            default: Literal(
                                Int(
                                    2,
                                ),
                            ),
                        },
                    ],
                    methods: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "B3",
                ),
                parent: Some(
                    Ident(
                        "A3",
                    ),
                ),
                members: ClassMembers {
                    init: None,
                    fields: [
                        Field {
                            name: Ident(
                                "b",
                            ),
                            default: Literal(
                                Int(
                                    3,
                                ),
                            ),
                        },
                    ],
                    methods: [],
                },
            },
        ),
        Class(
            Class {
                name: Ident(
                    "A4",
                ),
                parent: None,
                members: ClassMembers {
                    init: None,
                    fields: [
                        Field {
                            name: Ident(
                                "a",
                            ),
                            default: Literal(
                                Int(
                                    1,
                                ),
                            ),
                        },
                        Field {
                            name: Ident(
                                "b",
                            ),
                            default: Literal(
                                Int(
                                    2,
                                ),
                            ),
                        },
                    ],
                    methods: [],
                },
            },
        ),
        Expr(
            SetField(
                SetField {
                    target: GetField {
                        target: Call(
                            Call {
                                target: GetVar(
                                    GetVar {
                                        name: Ident(
                                            "A4",
                                        ),
                                    },
                                ),
                                args: [],
                            },
                        ),
                        name: Ident(
                            "a",
                        ),
                    },
                    value: Binary(
                        Binary {
                            op: Add,
                            left: GetField(
                                GetField {
                                    target: Call(
                                        Call {
                                            target: GetVar(
                                                GetVar {
                                                    name: Ident(
                                                        "A4",
                                                    ),
                                                },
                                            ),
                                            args: [],
                                        },
                                    ),
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                            right: Literal(
                                Int(
                                    3,
                                ),
                            ),
                        },
                    ),
                },
            ),
        ),
    ],
}
